--- a/profile/register/index.html
+++ b/profile/register/index.html
@@ -7,7 +7,7 @@
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="/css-framework-ca-2---master/api/js/index.mjs" defer type="module"></script>
+    <script src="/api/js/index.mjs" defer type="module"></script>
 </head>
 <body>
     <div class="container mt-5">
@@ -41,7 +41,7 @@
                         <h3>Register</h3>
                     </div>
                     <div class="card-body">
-                        <form id="registerForm" method="post" action="/auth/register">
+                        <form id="registerForm">
                             <div class="mb-3">
                                 <label for="name" class="form-label">Name</label>
                                 <input type="text" class="form-control" name="name" required pattern="^[\w]+$" title="User name must only contain lower case and upper case letters, numbers and underscore (_). Example: My_User123">
