--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <a class="nav-link active" aria-current="page" href="#">View Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Edit Profile</a>
+                <a class="nav-link" href="profile/edit/">Edit Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="profile/login/">Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Register</a>
+                <a class="nav-link" href="profile/register/">Register</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Feed</a>
